Closed Bug 1144347 Opened 11 years ago Closed 11 years ago

don't let ipc accessibility ride the 38 train

Categories

(Core :: Disability Access APIs, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla38
Tracking Status
firefox38 + fixed
firefox39 + wontfix

People

(Reporter: tbsaunde, Assigned: tbsaunde)

Details

Attachments

(1 file)

No description provided.
The ipc accessibility setup isn't ready for real use yet, and e10s isn't enabled on this branch so there's no point.
Attachment #8578915 - Flags: review?(dbolter)
Comment on attachment 8578915 [details] [diff] [review] disable ipc accessibility for firefox 38 Approval Request Comment [Feature/regressing bug #]: n/a [User impact if declined]: crashes, maybe other undesirable behavior [Describe test coverage new/current, TreeHerder]: n/a [Risks and why]: low just disables new features [String/UUID change made/needed]:
Attachment #8578915 - Flags: approval-mozilla-aurora?
Comment on attachment 8578915 [details] [diff] [review] disable ipc accessibility for firefox 38 Review of attachment 8578915 [details] [diff] [review]: ----------------------------------------------------------------- r=me (indent is off but that probably only helps illustrate this is temporary)
Attachment #8578915 - Flags: review?(dbolter) → review+
Comment on attachment 8578915 [details] [diff] [review] disable ipc accessibility for firefox 38 Trevor, I guess we don't want that to land on m-c, right?
Flags: needinfo?(tbsaunde+mozbugs)
Attachment #8578915 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Tracking for 39 too as e10s won't ship in this release and to make sure this is done at the beginning of the 39 aurora cycle.
(In reply to Sylvestre Ledru [:sylvestre] from comment #4) > Comment on attachment 8578915 [details] [diff] [review] > disable ipc accessibility for firefox 38 > > Trevor, I guess we don't want that to land on m-c, right? correct
Flags: needinfo?(tbsaunde+mozbugs)
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla38
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: