Bug 1144347 - Disable IPC accessibility for Firefox 38. r=dbolter, a=sledru

The ipc accessibility setup isn't ready for real use yet, and e10s isn't
enabled on this branch so there's no point.